update image and interface start

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         <div id="app" class="chatgpt-layout">
+            <div class="halftone"></div>
             <!-- Main content -->
             <div class="chat-header">
                 <h1>Chat lexical</h1>
