remove unused image and update clothing ensemble names; add loading indicators in chat interface

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id="app" class="chatgpt-layout">
             <div class="halftone"></div>
+            <div class="loader"></div>
             <!-- Main content -->
             <div class="chat-header">
                 <h1>Chat lexical</h1>
@@ -41,6 +42,11 @@
             </div>
             <main class="main-content">
                 <div class="chat-container">
+                    <div class="ensemble-info">
+                        <h2 class="ensemble-nom">Outfit Creator</h2>
+                        <p class="ensemble-description"></p>
+                        <p class="ensemble-prix"></p>
+                    </div>
                     <div id="chat-display" class="chat-display"></div>
                     <div class="input-container">
                         <textarea
@@ -67,7 +73,7 @@
                             </svg>
                         </button>
                     </div>
-                    <div class="disclaimer">ECAL 2025</div>
+                    <!-- <div class="disclaimer">ECAL 2025</div> -->
                 </div>
             </main>
 
