update clothing ensemble names and prices; enhance loading indicators and styling in chat interface

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                         <h2 class="ensemble-nom">Outfit Creator</h2>
                         <p class="ensemble-description"></p>
                         <p class="ensemble-prix"></p>
+                        <div class="prix-individuel">
+                            <p class="prix-chapeau"></p>
+                            <p class="prix-haut"></p>
+                            <p class="prix-bas"></p>
+                            <p class="prix-chaussures"></p>
+                        </div>
                     </div>
                     <div id="chat-display" class="chat-display"></div>
                     <div class="input-container">
