update clothing ensemble names and loading indicators in chat interface

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Chat lexical</title>
+        <title>Outfit Creator</title>
         <link rel="stylesheet" href="/src/styles/style.css" />
         <link rel="stylesheet" href="/src/minify/minify.css" />
     </head>
     <body>
         <div id="app" class="chatgpt-layout">
             <div class="halftone"></div>
+            <div class="border"></div>
             <div class="loader"></div>
             <!-- Main content -->
             <div class="chat-header">
