update message input placeholder for clarity

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <textarea
                             class="input-area"
                             id="message-input"
-                            placeholder="Poser une question..."
+                            placeholder="Quel outfit aimerais-tu ?"
                             rows="1"
                         ></textarea>
                         <button class="send-button" id="send-button">
